# FastDate

./: .gitignore  Directory.Build.props  FastDate.sln  README.md  RustLib.sln  nuget.config
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
.nuke/: build.schema.json  parameters.json
FastDate/: FastDate.csproj  Library.cs  NativeMethods.g.cs
FastDateTester/: FastDateTester.csproj  Program.cs
RustLib/: Library.cs
RustLibTester/: Program.cs  RustLibTester.csproj
fastdatecore/: Cargo.toml  build.rs
fastdatecore/src/: lib.rs
libs/: librust_lib.dylib
rust-lib/: build.rs
src/FastDate/: DateTimeExtensions.cs  FastDate.csproj  Library.cs  NativeMethods.g.cs  NativeWrapper.cs
src/FastDateTester/: Program.cs
src/fastdatecore/: Cargo.toml  build.rs
src/fastdatecore/src/: constants.rs  lib.rs  neon.rs  sse.rs
